# stt-microservice

./: .dockerignore  .env.example  .env.k6.example  .gitignore  LOAD_TESTING.md  Makefile  README.md  load-test.js  pyproject.toml  test-results.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: additional-memory-improvements.md  batch-transcription-implementation-plan.md  cpp-bindings-memory-release.md  isolated-process-feature-flag.md  latency-fix.md  load-balancing.md  load-testing.md  local-cluster.md  memory-debugging.md  memory-leak-findings.md  memory-leak-visualization.md  memory-monitoring.md  potential-memory-fixes.md  process-isolation.md  speech-sdk-memory-tracking.md  test-results.md
k8s/: deployment.yaml  grafana-dashboard.json  monitor.yaml  service.yaml
reports/: k6-report-2025-11-24-075205.html
scripts/: batch-transcribe.sh  create-k8s-azure-credentials.sh  create-local-sp.sh  deploy-azure.sh  deploy-local.sh  generate-audio-list.sh  get-service-url.sh  import-grafana-dashboard.sh  provision.sh  run-load-test.sh  utils.sh
src/: Dockerfile  main.py
src/api/: debug.py  stt.py
src/core/: config.py  exception.py  logging.py  memory_collector.py  process_metrics.py  profiler.py  trace.py
src/service/stt/: fast_transcription.py  hybrid_service.py  models.py  process_service.py  process_worker.py  service.py
stt-java-service/: .gitignore  Dockerfile  pom.xml
stt-java-service/k8s/: deployment.yaml  monitor.yaml  service.yaml
stt-java-service/src/main/java/com/stt/: SttJavaApplication.java
stt-java-service/src/main/java/com/stt/config/: OpenApiConfiguration.java  SpeechConfiguration.java
stt-java-service/src/main/java/com/stt/controller/: TranscriptionController.java
stt-java-service/src/main/java/com/stt/model/: TranscriptionResponse.java  TranscriptionSegment.java
stt-java-service/src/main/java/com/stt/service/: TranscriptionService.java
stt-java-service/src/main/resources/: application.yaml
