[project]
name = "stt-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)",
    "azure-cognitiveservices-speech (>=1.47.0,<2.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.ruff.lint]
select = [
    "B0",     # bugbear
    "E",      # default
    "F",      # default
    "UP",     # pyupgrade
    "RUF100", # valid noqa annotations
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "S",      # bandit security
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "I",      # isort import sorting
    "D",      # pydocstyle - docstring conventions
    "TID",    # flake8-tidy-imports - import conventions
]

ignore = [
    "D401",   # First line should be in imperative mood
    "S104",   # Possible binding to all interfaces
    "T201",   # Print statements allowed for CLI output
    "D102",   # All methods require a docstring - not required for simple/obvious methods
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Use NumPy style docstrings

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff]
line-length = 240

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-between-types = 0  # Explicitly set to avoid warning when force-sort-within-sections is true
known-first-party = ["src", "eval", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports
ban-relative-imports = "all"

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    #"--cov-fail-under=80"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src/backend"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*", "src/frontend/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# MyPy configuration
[tool.mypy]
python_version = "3.13"
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false # Set to true for stricter typing
no_implicit_optional = true
strict_optional = true
